--- a/OriginMap/table/unit.ini
+++ b/OriginMap/table/unit.ini
@@ -7503,7 +7503,7 @@ _parent = "nmgv"
 -- 名字
 Name = "仓库（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0MC,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0MC,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -24959,7 +24959,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cff3366ff仓库-倾雪寒晶|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25131,7 +25131,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cffff6800仓库-救死扶伤|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25164,7 +25164,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cffffff00仓库-瞬息万年|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25197,7 +25197,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cff3366ff仓库-紫雷之极|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25267,7 +25267,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cff99cc00仓库-万物之源|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25300,7 +25300,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cffff0000仓库-熔炎火炮|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25333,7 +25333,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cffff00ff仓库-货币达人|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25366,7 +25366,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cffff6800仓库-心寞孤客|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -25432,7 +25432,7 @@ _parent = "nmgv"
 -- 名字
 Name = "|cffffff00仓库-紫薇上神|r（输入-H到你身边）"
 -- 普通
-abilList = "AInv,Avul,A0GT,A0KZ,A0L0,A0L3,A0ME"
+abilList = "AInv,Avul,A0KZ,A0L0,A0L3,A0ME,A08M"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
