删除了一个旧版本的存档读取失败就不会存的问题

--- a/OriginMap/table/ability.ini
+++ b/OriginMap/table/ability.ini
@@ -30352,7 +30352,7 @@ Name = "常用指令"
 -- 提示工具 - 普通
 Tip = "常用指令"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "hg 回城|n-h 召唤仓库|n-+ 提高视野|n-- 降低视野|n-sh 隐藏技能伤害显示(不推荐新手使用)|n-yc 隐藏面板|n-cj (官方对战平台)查看所有成就/切换成就|n-ms 令魔兽无法被选中，进入自动施法状态|n-bs 清除地上所有宝石，不会让游戏过卡|n-ym 清除地上的羽毛，不会让游戏过卡|n-fh 若出现不能复活的BUG，输入该指令进行复活|n-kill 自杀|n-zz 关闭赞助功能"
+Ubertip = "hg 回城|n-h 召唤仓库|n-sh 隐藏技能伤害显示(不推荐新手使用)|n-yc 隐藏面板|n-ms 令魔兽无法被选中，进入自动施法状态|n-bs 清除地上所有宝石，不会让游戏过卡|n-ym 清除地上的羽毛，不会让游戏过卡|n-fh 若出现不能复活的BUG，输入该指令进行复活|n-kill 自杀|n-zz 关闭赞助功能"
 
 [A0KT]
 _parent = "Amgr"
@@ -38403,3 +38403,135 @@ Missilespeed = 1500
 Name = "凤凰火焰(泣罗刹爆炸)"
 -- 提示工具 - 普通
 Tip = "凤凰火焰(泣罗刹爆炸)"
+
+
+-- 被动的书内技能
+[AMI4]
+Name = "皮肤礼包" -- 名字
+    _parent = "Amgr"
+    Buttonpos_1 = 1 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 1 -- 按钮位置 - 普通 (Y)
+    Requires = "RMI4" -- 需求
+    Art = "ReplaceableTextures\\CommandButtons\\btnMallItem2.blp" -- 图标 - 普通
+    EditorSuffix = "" -- 编辑器后缀
+    Tip = "皮肤礼包"  -- 提示工具 - 普通
+    Ubertip = "无需挑战成就,直接解锁以下皮肤的使用：\n瑟雨：赤血白燕\n晓月：月轮绯狱\n湮灭：殛霆无迹\n玄雪：末日权杖\n泰雅：三弦星谧\n辰寂：霜夜之哀\n寒殇：獠牙之匕\n凌雪：沐雪无瑕\n辰寂：双流贯恒\n莫琪：星界麒麟\n凯撒：熔日煌世\n玄雪：凝冰红灯\n摄焱：凰迹天知\n霸绝：封霜玄锋\n幻逸：天罚四界\n司宸：白莲圣日·黑羽魔月\n苍凌：翎翼浮灵\n黑阎：七阴之恸\n离魑：谜幻逸空\n寒殇：耀金独心\n星胧：绯想龙域" -- 提示工具 - 普通 - 扩展
+
+-- 被动的书内技能
+[AMI3]
+Name = "永久赞助" -- 名字
+    _parent = "Amgr"
+    Buttonpos_1 = 0 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 1 -- 按钮位置 - 普通 (Y)
+    Requires = "RMI3" -- 需求
+    Art = "ReplaceableTextures\\CommandButtons\\btnMallItem5.blp" -- 图标 - 普通
+    EditorSuffix = "" -- 编辑器后缀
+    Tip = "永久赞助"  -- 提示工具 - 普通
+    Ubertip = "1. 可以直接选取英雄星胧、幻逸、梦霁、苍凌、宵霆。\n2. 英雄直接解锁湮灭/凯撒/莫琪的黑化功能。\n3. 英雄将获得七彩皮肤效果。\n4. 开局金币10000(不与平台等级叠加)。\n5. 开局立即获得\"琉璃璞玉\",任意宝石升级装备成功率100%。\n6. 选择所有难度(包括前4个)均能体验24+5+2波进攻，并解锁混沌区域。\n7. 专属指令(-hc)可以把地面上的宝箱一键合成高级宝箱。\n8. 可以雇佣第5第6号雇佣兵。\n9. 基地将获得3次防护罩效果。\n10. 解锁仓库-熔炎火炮.\n11. 永久解锁\"狂欢模式\"的游玩" -- 提示工具 - 普通 - 扩展
+
+-- 被动的书内技能
+[AMI2]
+Name = "签到特权" -- 名字
+    _parent = "Amgr"
+    Buttonpos_1 = 2 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 2 -- 按钮位置 - 普通 (Y)
+    Requires = "RMI2" -- 需求
+    Art = "ReplaceableTextures\\CommandButtons\\btnMallItem4.blp" -- 图标 - 普通
+    EditorSuffix = "" -- 编辑器后缀
+    Tip = "签到特权"  -- 提示工具 - 普通
+    Ubertip = "1.持有道具可直接增加累计签到天数 3 天。\n2.累计签到不再要求连续进行，签到进度将持续保留且不会重置。" -- 提示工具 - 普通 - 扩展
+
+-- 主动的书内技能
+[AMI1]
+Name = "经验礼包" -- 名字
+    _parent = "ANcl"
+    Animnames = "spell,slam" -- 效果 - 施法动作
+    Art = "ReplaceableTextures\\CommandButtons\\btnMallItem1.blp" -- 图标 - 普通
+    Buttonpos_1 = 1 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 2 -- 按钮位置 - 普通 (Y)
+    Requires = "RMI1" -- 需求
+    CasterArt = "" -- 效果 - 施法者
+    Casterattach = "" -- 效果 - 施法者附加点1
+    Cool = 0 -- 魔法施放时间间隔
+    Cost = 0 -- 魔法消耗
+    DataA = 0.0000 -- 施法持续时间
+    DataC = 1 -- 选项
+    DataD = 0.0000 -- 动作持续时间
+    DataE = 0 -- 使其他技能无效
+    DataF = "rainofchaos" -- 基础命令ID
+    Hotkey = "W" -- 热键 - 普通
+    Order = "rainofchaos" -- 命令串 - 使用/打开
+    Rng = 0.0000 -- 施法距离
+    Tip = "经验礼包(|cffffcc00W|r)" -- 提示工具 - 普通
+    Ubertip = "点击后英雄可以获得2000经验." -- 提示工具 - 普通 - 扩展
+    hero = 0 -- 英雄技能
+    levels = 1 -- 等级
+
+-- 主动的书内技能
+[AMI0]
+Name = "金币礼包" -- 名字
+    _parent = "ANcl"
+    Animnames = "spell,slam" -- 效果 - 施法动作
+    Art = "ReplaceableTextures\\CommandButtons\\btnMallItem3.blp" -- 图标 - 普通
+    Buttonpos_1 = 0 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 2 -- 按钮位置 - 普通 (Y)
+    Requires = "RMI0" -- 需求
+    CasterArt = "" -- 效果 - 施法者
+    Casterattach = "" -- 效果 - 施法者附加点1
+    Cool = 0 -- 魔法施放时间间隔
+    Cost = 0 -- 魔法消耗
+    DataA = 0.0000 -- 施法持续时间
+    DataC = 1 -- 选项
+    DataD = 0.0000 -- 动作持续时间
+    DataE = 0 -- 使其他技能无效
+    DataF = "rainofchaos" -- 基础命令ID
+    Hotkey = "Q" -- 热键 - 普通
+    Order = "rainofchaos" -- 命令串 - 使用/打开
+    Rng = 0.0000 -- 施法距离
+    Tip = "金币礼包(|cffffcc00Q|r)" -- 提示工具 - 普通
+    Ubertip = "点击后可以获得3000金币." -- 提示工具 - 普通 - 扩展
+    hero = 0 -- 英雄技能
+    levels = 1 -- 等级
+
+-- 魔法书入口
+[ABx2]
+Name = "商城道具" -- 名字
+	_parent = "Aspb"
+    Buttonpos_1 = 3 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 0 -- 按钮位置 - 普通 (Y)
+	Art = "ReplaceableTextures\\CommandButtons\\btnMallEntry.blp" -- 图标 - 普通
+	DataA = "AMI0,AMI1,AMI2,AMI3,AMI4" -- 法术列表
+	DataB = 0 -- 共享法术CD间隔
+	DataC = 11 -- 最小法术数量
+	DataD = 11 -- 最大法术数量
+	DataE = "immolation" -- 基础命令ID
+	Hotkey = "A" -- 热键 - 普通
+	Tip = "|cffccffcc商城道具|r(|cffffcc00A|r)" -- 提示工具 - 普通
+	Ubertip = "查看你拥有的商城道具."
+	-- 提示工具 - 普通 - 扩展
+	item = 0 -- 物品技能
+	race = "human" -- 种族
+
+[ABx1]
+Name = "英雄皮肤" -- 名字
+    _parent = "ANcl"
+    Animnames = "spell,slam" -- 效果 - 施法动作
+    Art = "ReplaceableTextures\\CommandButtons\\btnSkinEntry.blp" -- 图标 - 普通
+    Buttonpos_1 = 3 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 1 -- 按钮位置 - 普通 (Y)
+    CasterArt = "" -- 效果 - 施法者
+    Casterattach = "" -- 效果 - 施法者附加点1
+    Cool = 1 -- 魔法施放时间间隔
+    Cost = 0 -- 魔法消耗
+    DataA = 0.0000 -- 施法持续时间
+    DataC = 1 -- 选项
+    DataD = 0.0000 -- 动作持续时间
+    DataE = 0 -- 使其他技能无效
+    DataF = "renew" -- 基础命令ID
+    Hotkey = "G" -- 热键 - 普通
+    Order = "renew" -- 命令串 - 使用/打开
+    Rng = 0.0000 -- 施法距离
+    Tip = "英雄皮肤(|cffffcc00G|r)" -- 提示工具 - 普通
+    Ubertip = "查看你拥有的英雄皮肤及获取条件." -- 提示工具 - 普通 - 扩展
+    hero = 0 -- 英雄技能
+    levels = 1 -- 等级
