--- a/OriginMap/table/upgrade.ini
+++ b/OriginMap/table/upgrade.ini
@@ -5832,3 +5832,50 @@ maxlevel = 30
 mod1 = 60.0
 -- 效果 2 - %s
 mod2 = 0.5
+
+
+[RMI0]
+Name = "获得该商城道具" -- 名字
+	_parent = "Rhcd" 
+	Requires = ""  -- 需求
+	Tip = "获得该商城道具"  -- 提示工具
+	Ubertip = "获得该商城道具"  -- 提示工具 - 扩展
+	goldbase = 0  -- 基础黄金消耗
+	lumberbase = 0 -- 基础木材消耗
+
+[RMI1]
+Name = "获得该商城道具" -- 名字
+	_parent = "Rhcd" 
+	Requires = ""  -- 需求
+	Tip = "获得该商城道具"  -- 提示工具
+	Ubertip = "获得该商城道具"  -- 提示工具 - 扩展
+	goldbase = 0  -- 基础黄金消耗
+	lumberbase = 0 -- 基础木材消耗
+
+[RMI2]
+Name = "获得该商城道具" -- 名字
+	_parent = "Rhcd" 
+	Requires = ""  -- 需求
+	Tip = "获得该商城道具"  -- 提示工具
+	Ubertip = "获得该商城道具"  -- 提示工具 - 扩展
+	goldbase = 0  -- 基础黄金消耗
+	lumberbase = 0 -- 基础木材消耗
+
+[RMI3]
+Name = "获得该商城道具" -- 名字
+	_parent = "Rhcd" 
+	Requires = ""  -- 需求
+	Tip = "获得该商城道具"  -- 提示工具
+	Ubertip = "获得该商城道具"  -- 提示工具 - 扩展
+	goldbase = 0  -- 基础黄金消耗
+	lumberbase = 0 -- 基础木材消耗
+
+[RMI4]
+Name = "获得该商城道具" -- 名字
+	_parent = "Rhcd" 
+	Requires = ""  -- 需求
+	Tip = "获得该商城道具"  -- 提示工具
+	Ubertip = "获得该商城道具"  -- 提示工具 - 扩展
+	goldbase = 0  -- 基础黄金消耗
+	lumberbase = 0 -- 基础木材消耗
+
