--- a/OriginMap/table/w3i.ini
+++ b/OriginMap/table/w3i.ini
@@ -1,11 +1,11 @@
 [地图]
 文件版本 = 25
-地图版本 = 3266
+地图版本 = 3277
 编辑器版本 = 6052
 地图名称 = "轮回之狱"
-作者名字 = "Crainax(旧名Laser)"
+作者名字 = "Crainax"
 地图描述 = [=[
-魔界滋生了六界之外的力量,而人神妖鬼仙界察觉了这种力量，而决定联手起来将魔界歼灭。寻找战友、提交BUG、寻找攻略请加官方地图QQ群148199145。
+魔界滋生了六界之外的力量,而人神妖鬼仙界察觉了这种力量，而决定联手起来将魔界歼灭。官方地图QQ交流群413359254.
 该地图需要在1.24的魔兽版本上运行。]=]
 推荐玩家 = "不建议单人"
 
