--- a/OriginMap/table/unit.ini
+++ b/OriginMap/table/unit.ini
@@ -24992,7 +24992,7 @@ _parent = "ngme"
 -- 生命最大值
 HP = 1
 -- 名字
-Name = "|cff00ccff五|r|cff19d1e6界|r|cff33d6cc之|r|cff4cdbb3汇|r|cff66e099 |r|cff7fe580-|r|cff99ea66 |r|cffb2ef4d光|r|cffccf433环|r|cffe5f91a芯|r|cffffff00源|n|r|cffff00ff【官方公会<小可爱>】|r"
+Name = "|cff00ccff五|r|cff19d1e6界|r|cff33d6cc之|r|cff4cdbb3汇|r|cff66e099 |r|cff7fe580-|r|cff99ea66 |r|cffb2ef4d光|r|cffccf433环|r|cffe5f91a芯|r|cffffff00源|r"
 -- 售出物品
 Sellitems = ""
 -- 普通
