所有商城道具完成了

--- a/OriginMap/table/ability.ini
+++ b/OriginMap/table/ability.ini
@@ -38406,6 +38406,18 @@ Tip = "凤凰火焰(泣罗刹爆炸)"
 
 
 -- 被动的书内技能
+[AMI5]
+Name = "地图等级" -- 名字
+    _parent = "Amgr"
+    Buttonpos_1 = 2 -- 按钮位置 - 普通 (X)
+    Buttonpos_2 = 1 -- 按钮位置 - 普通 (Y)
+    Requires = "" -- 需求
+    Art = "ReplaceableTextures\\CommandButtons\\BTNChestOfGold.blp" -- 图标 - 普通
+    EditorSuffix = "" -- 编辑器后缀
+    Tip = "地图等级"  -- 提示工具 - 普通
+    Ubertip = "对于地图等级,如果你达到了不同的等级,你的起始金币也会得到不同数量的奖励:|n|n|cff00ccff2级:解锁\"幻逸\"英雄的使用.|n6级:解锁\"梦霁\"英雄的使用.|n8级:解锁\"苍凌\"英雄的使用.|n10级:解锁湮灭/凯撒/莫琪的黑化功能.|n12级:解锁\"星胧\"英雄的使用.|n15级:起始金币8000.|n18级:解锁仓库-紫极之雷.|n20级:起始金币10000.|n(每升10级仓库自定义的头衔字数+1)." -- 提示工具 - 普通 - 扩展
+
+-- 被动的书内技能
 [AMI4]
 Name = "皮肤礼包" -- 名字
     _parent = "Amgr"
@@ -38452,15 +38464,15 @@ Name = "经验礼包" -- 名字
     Requires = "RMI1" -- 需求
     CasterArt = "" -- 效果 - 施法者
     Casterattach = "" -- 效果 - 施法者附加点1
-    Cool = 0 -- 魔法施放时间间隔
+    Cool = 1 -- 魔法施放时间间隔
     Cost = 0 -- 魔法消耗
     DataA = 0.0000 -- 施法持续时间
     DataC = 1 -- 选项
     DataD = 0.0000 -- 动作持续时间
     DataE = 0 -- 使其他技能无效
-    DataF = "rainofchaos" -- 基础命令ID
+    DataF = "detonate" -- 基础命令ID
     Hotkey = "W" -- 热键 - 普通
-    Order = "rainofchaos" -- 命令串 - 使用/打开
+    Order = "detonate" -- 命令串 - 使用/打开
     Rng = 0.0000 -- 施法距离
     Tip = "经验礼包(|cffffcc00W|r)" -- 提示工具 - 普通
     Ubertip = "点击后英雄可以获得2000经验." -- 提示工具 - 普通 - 扩展
@@ -38478,15 +38490,15 @@ Name = "金币礼包" -- 名字
     Requires = "RMI0" -- 需求
     CasterArt = "" -- 效果 - 施法者
     Casterattach = "" -- 效果 - 施法者附加点1
-    Cool = 0 -- 魔法施放时间间隔
+    Cool = 1 -- 魔法施放时间间隔
     Cost = 0 -- 魔法消耗
     DataA = 0.0000 -- 施法持续时间
     DataC = 1 -- 选项
     DataD = 0.0000 -- 动作持续时间
     DataE = 0 -- 使其他技能无效
-    DataF = "rainofchaos" -- 基础命令ID
+    DataF = "eattree" -- 基础命令ID
     Hotkey = "Q" -- 热键 - 普通
-    Order = "rainofchaos" -- 命令串 - 使用/打开
+    Order = "eattree" -- 命令串 - 使用/打开
     Rng = 0.0000 -- 施法距离
     Tip = "金币礼包(|cffffcc00Q|r)" -- 提示工具 - 普通
     Ubertip = "点击后可以获得3000金币." -- 提示工具 - 普通 - 扩展
@@ -38500,7 +38512,7 @@ Name = "商城道具" -- 名字
     Buttonpos_1 = 3 -- 按钮位置 - 普通 (X)
     Buttonpos_2 = 0 -- 按钮位置 - 普通 (Y)
 	Art = "ReplaceableTextures\\CommandButtons\\btnMallEntry.blp" -- 图标 - 普通
-	DataA = "AMI0,AMI1,AMI2,AMI3,AMI4" -- 法术列表
+	DataA = "AMI0,AMI1,AMI2,AMI3,AMI4,AMI5" -- 法术列表
 	DataB = 0 -- 共享法术CD间隔
 	DataC = 11 -- 最小法术数量
 	DataD = 11 -- 最大法术数量
