--- a/OriginMap/table/ability.ini
+++ b/OriginMap/table/ability.ini
@@ -10612,11 +10612,12 @@ levels = 4
 race = "creeps"
 -- 目标允许
 targs = {
-"neutral,ground,enemies,organic,debris,air,nonhero",
-"neutral,ground,enemies,organic,debris,air,nonhero",
-"neutral,ground,enemies,organic,debris,air,nonhero",
-"neutral,ground,enemies,organic,debris,air,nonhero",
+"air,ground,enemy,neutral,organic,nonhero",
+"air,ground,enemy,neutral,organic,nonhero",
+"air,ground,enemy,neutral,organic,nonhero",
+"air,ground,enemy,neutral,organic,nonhero",
 }
+
 
 [A043]
 _parent = "ACct"
@@ -11685,7 +11686,7 @@ levels = 1
 -- 种族
 race = "unknown"
 -- 目标允许
-targs = "neutral,ground,enemies,organic,debris,air,nonhero"
+targs = "neutral,ground,enemies,organic,air,nonhero"
 
 [A04Q]
 _parent = "AHtb"
@@ -11720,7 +11721,7 @@ levels = 1
 -- 种族
 race = "unknown"
 -- 目标允许
-targs = "neutral,ground,enemies,organic,debris,air,nonhero"
+targs = "neutral,ground,enemies,organic,air,nonhero"
 
 [A04R]
 _parent = "AHtb"
@@ -11755,7 +11756,7 @@ levels = 1
 -- 种族
 race = "unknown"
 -- 目标允许
-targs = "debris,enemies,ground,nonhero,air,organic,neutral"
+targs = "enemies,ground,nonhero,air,organic,neutral"
 
 [A04S]
 _parent = "AHad"
@@ -14343,7 +14344,7 @@ levels = 1
 -- 种族
 race = "unknown"
 -- 目标允许
-targs = "neutral,ground,enemies,organic,debris,air,nonhero"
+targs = "air,ground,enemy,neutral,organic,nonhero"
 
 [A06E]
 _parent = "Asph"
@@ -21458,7 +21459,9 @@ levels = 1
 -- 种族
 race = "unknown"
 -- 目标允许
-targs = "debris,enemies,ground,nonhero,air,organic,neutral"
+targs = "enemies,ground,nonhero,air,organic,neutral"
+
+
 
 [A0E2]
 _parent = "ACua"
