--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,27 @@
 *.w3x
 .gradle
-/edit/logs
-/edit/backups
 /origin/*.w3x
-/edit/*.bat
-/edit/*.sh
 *.sublime-project
 *.sublime-workspace
 *.w3o
-*.psd
+*.dll
 *.blp
 *.mdx
+*.mp3
+*.wav
+*.doo
+*.w3e
+*.tga
+*.shd
+*.wpm
+*.w3e
+*.doo
+*.ttf
+*.w3s
+/UnitTestMap/*
+/OriginMap/map/war3map.j
+/ModelTest/*
+/Tools/*
+/abandon/
+.vscode/tasks.json
+/output
